CASSSIDECAR-193: Add feature level permissions to Sidecar (#179)
Patch by Saranya Krishnakumar; Reviewed by Francisco Guerrero, Yifan Cai for CASSSIDECAR-193